--- a/references.bib
+++ b/references.bib
@@ -10,6 +10,60 @@
   publisher={American Association for the Advancement of Science}
 }
 
+
+@article{brewer2016dnest4,
+  title={DNest4: Diffusive Nested Sampling in C++ and Python},
+  author={Brewer, Brendon J and Foreman-Mackey, Daniel},
+  journal={arXiv preprint arXiv:1606.03757},
+  year={2016}
+}
+
+@book{brooks2011handbook,
+  title={Handbook of markov chain monte carlo},
+  author={Brooks, Steve and Gelman, Andrew and Jones, Galin and Meng, Xiao-Li},
+  year={2011},
+  publisher={CRC press}
+}
+
+
+
+@article{gelman1992inference,
+  title={Inference from iterative simulation using multiple sequences},
+  author={Gelman, Andrew and Rubin, Donald B and others},
+  journal={Statistical science},
+  volume={7},
+  number={4},
+  pages={457--472},
+  year={1992},
+  publisher={Institute of Mathematical Statistics}
+}
+
+
+@article{brooks1998general,
+  title={General methods for monitoring convergence of iterative simulations},
+  author={Brooks, Stephen P and Gelman, Andrew},
+  journal={Journal of computational and graphical statistics},
+  volume={7},
+  number={4},
+  pages={434--455},
+  year={1998},
+  publisher={Taylor \& Francis Group}
+}
+
+
+
+@article{ratmann2007using,
+  title={Using likelihood-free inference to compare evolutionary dynamics of the protein networks of H. pylori and P. falciparum},
+  author={Ratmann, Oliver and J{\o}rgensen, Ole and Hinkley, Trevor and Stumpf, Michael and Richardson, Sylvia and Wiuf, Carsten},
+  journal={PLoS Computational Biology},
+  volume={3},
+  number={11},
+  pages={e230},
+  year={2007},
+  publisher={Public Library of Science}
+}
+
+
 @article{wong2018structural,
   title={Structural conditions on complex networks for the Michaelis--Menten input--output response},
   author={Wong, Felix and Dutta, Annwesha and Chowdhury, Debashish and Gunawardena, Jeremy},
@@ -149,6 +203,29 @@
   publisher={Nature Publishing Group}
 }
 
+
+@article{bustamante2004mechanical,
+  title={Mechanical processes in biochemistry},
+  author={Bustamante, Carlos and Chemla, Yann R and Forde, Nancy R and Izhaky, David},
+  journal={Annual review of biochemistry},
+  volume={73},
+  number={1},
+  pages={705--748},
+  year={2004},
+  publisher={Annual Reviews 4139 El Camino Way, PO Box 10139, Palo Alto, CA 94303-0139, USA}
+}
+
+
+@article{jahnke2007solving,
+  title={Solving the chemical master equation for monomolecular reaction systems analytically},
+  author={Jahnke, Tobias and Huisinga, Wilhelm},
+  journal={Journal of mathematical biology},
+  volume={54},
+  number={1},
+  pages={1--26},
+  year={2007},
+  publisher={Springer}
+}
 
 
 
@@ -544,6 +621,16 @@
 
 
 
+@article{moler2003nineteen,
+  title={Nineteen dubious ways to compute the exponential of a matrix, twenty-five years later},
+  author={Moler, Cleve and Van Loan, Charles},
+  journal={SIAM review},
+  volume={45},
+  number={1},
+  pages={3--49},
+  year={2003},
+  publisher={SIAM}
+}
 
 
 
@@ -607,9 +694,21 @@
   publisher={Nature Publishing Group}
 }
 
+@article{cleland1975partition,
+  title={Partition analysis and concept of net rate constants as tools in enzyme kinetics},
+  author={Cleland, WW},
+  journal={Biochemistry},
+  volume={14},
+  number={14},
+  pages={3220--3224},
+  year={1975},
+  publisher={ACS Publications}
+}
+
+
 @article{kireeva2018rna,
   title={RNA--DNA and DNA--DNA base-pairing at the upstream edge of the transcription bubble regulate translocation of RNA polymerase and transcription rate},
-  author={KIreeva, Maria and Trang, Cyndi and Matevosyan, Gayane and Turek-Herman, Joshua and Chasov, Vitaly and Lubkowska, Lucyna and Kashlev, Mikhail},
+  author={Kireeva, Maria and Trang, Cyndi and Matevosyan, Gayane and Turek-Herman, Joshua and Chasov, Vitaly and Lubkowska, Lucyna and Kashlev, Mikhail},
   journal={Nucleic acids research},
   volume={46},
   number={11},
@@ -1080,23 +1179,7 @@
   publisher={Taylor \& Francis}
 }
 
-@article{ratmann2007using,
-  title={Using likelihood-free inference to compare evolutionary dynamics of the protein networks of H. pylori and P. falciparum},
-  author={Ratmann, Oliver and J{\o}rgensen, Ole and Hinkley, Trevor and Stumpf, Michael and Richardson, Sylvia and Wiuf, Carsten},
-  journal={PLoS Computational Biology},
-  volume={3},
-  number={11},
-  pages={e230},
-  year={2007},
-  publisher={Public Library of Science}
-}
 
-@article{brewer2016dnest4,
-  title={DNest4: Diffusive Nested Sampling in C++ and Python},
-  author={Brewer, Brendon J and Foreman-Mackey, Daniel},
-  journal={arXiv preprint arXiv:1606.03757},
-  year={2016}
-}
 
 @article{galburt2007backtracking,
   title={Backtracking determines the force sensitivity of RNAP II in a factor-dependent manner},
